//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  username String [unique, not null]
  email String [unique, not null]
  pwhash String [not null]
  role Role [not null, default: 'user']
  firstName String
  lastName String
  paid expenses [not null]
  debts debts [not null]
  groups groups [not null]
  BalanceA Balance [not null]
  BalanceB Balance [not null]
  Payment Payment [not null]
}

Table groups {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  simplify Boolean [not null, default: false]
  members users [not null]
  expenses expenses [not null]
  Balance Balance [not null]
}

Table expenses {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  payerId Int [not null]
  payer users [not null]
  groupId Int [not null]
  group groups [not null]
  amount Float [not null]
  currency Currency [not null, default: 'HUF']
  category ExpenseCategory [not null, default: 'Grocery']
  distribution Distribution [not null, default: 'equal']
  description String
  debts debts [not null]
}

Table debts {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  amount Float [not null]
  currency2 Currency [not null]
  expenseId Int [not null]
  expense expenses [not null]
  userId Int [not null]
  user users [not null]
  BalanceA Balance
  balanceIdA Int
  BalanceB Balance
  balanceIdB Int
}

Table Balance {
  id Int [pk, increment]
  groupId Int [not null]
  group groups [not null]
  userAId Int [not null]
  userA users [not null]
  userBId Int [not null]
  userB users [not null]
  userADebtsToB debts [not null]
  userBDebtsToA debts [not null]
  userAPaid Payment [not null]
  userBPaid Payment [not null]
}

Table Payment {
  id Int [pk, increment]
  amount Float [not null]
  currency Currency [not null]
  userId Int [not null]
  user users [not null]
  balanceA Balance
  balanceIdA Int
  balanceB Balance
  balanceIdB Int
}

Table GroupToUser {
  groupsId Int [ref: > groups.id]
  membersId Int [ref: > users.id]
}

Enum Currency {
  HUF
  EUR
  USD
  RUB
  JPY
}

Enum ExpenseCategory {
  Grocery
  Restaurant
  Ticket
  Travel
}

Enum Distribution {
  equal
  proportional
  exact_amounts
}

Enum Role {
  user
  admin
}

Ref: expenses.payerId > users.id

Ref: expenses.groupId > groups.id

Ref: debts.expenseId > expenses.id

Ref: debts.userId > users.id

Ref: debts.balanceIdA > Balance.id

Ref: debts.balanceIdB > Balance.id

Ref: Balance.groupId > groups.id

Ref: Balance.userAId > users.id

Ref: Balance.userBId > users.id

Ref: Payment.userId > users.id

Ref: Payment.balanceIdA > Balance.id

Ref: Payment.balanceIdB > Balance.id